# PluginLoader

./: CMakeLists.txt  README.md  main.cpp
include/: PluginLoader.hpp
plugins/: CMakeLists.txt  Digestion.hpp  Entity.hpp  Move.hpp  animal.cpp  foo.cpp
src/: CMakeLists.txt  PluginLoader.cpp
